--- a/content-translator/modules/content-translator-util/build.gradle
+++ b/content-translator/modules/content-translator-util/build.gradle
@@ -1,8 +1,16 @@
 dependencies {
-	provided group: 'com.liferay.portal', name: 'com.liferay.portal.kernel', version: '2.0.0'
+	provided group: "javax.portlet", name: "portlet-api", version: "2.0"
+	provided group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
+	provided group: "javax.servlet.jsp", name: "javax.servlet.jsp-api", version: "2.3.1"
 	provided group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
+	provided group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
+	provided group: 'com.liferay.portal', name: 'com.liferay.portal.kernel', version: '2.0.0'
+	provided group: 'com.liferay', name: 'com.liferay.journal.web', version: '1.7.2'
+ 	provided group: 'com.liferay', name: 'com.liferay.journal.api', version: '2.0.0'
+	provided group: 'com.liferay', name: 'com.liferay.dynamic.data.mapping.api', version: '3.5.4'
 	provided project(":modules:content-translator-configuration")
 	provided project(":modules:yandex-translator-api")
+	
 	compile group: 'com.google.guava', name: 'guava', version: '22.0'
 }
