--- a/content-translator/modules/content-translator-configuration/src/main/resources/content/Language.properties
+++ b/content-translator/modules/content-translator-configuration/src/main/resources/content/Language.properties
@@ -8,11 +8,5 @@ translator-api=Microsoft Translator API URLs
 translator-auth-url=OAuth URL
 translator-api-url=API URL
 translator-configuration-name=Automatic Translator Configuration
-
-## CUSTOM JSP
-add-automatic-translation=Automatic Translation
-journal.article.form.translate.select.language=Select Languages
-
-translator-error-message=Please verify that your credentials are valid.
-translator-auth-error-message=Please set your credentials in Portal Settings
-save-a-version-first=Please save an initial version before using automatic translation
+translator.configuration.yandex.api.name=Yandex API Key
+translator.configuration.yandex.api.desc=It can be obtained here https://translate.yandex.com/developers/keys
