Bad API key authentication message

--- a/content-translator/modules/content-translator-language/src/main/resources/content/Language.properties
+++ b/content-translator/modules/content-translator-language/src/main/resources/content/Language.properties
@@ -14,5 +14,5 @@ add-automatic-translation=Automatic Translation
 journal.article.form.translate.select.language=Select Languages
 
 translator-error-message=Please verify that your credentials are valid.
-translator-auth-error-message=Please set your credentials in Portal Settings
+translator-auth-error-message=Please set your credentials in System Settings
 save-a-version-first=Please save an initial version before using automatic translation
