LRA-260 Fix refreshing of the API key on change. Also, throw a more explicit error when API key is not set

--- a/content-translator/modules/content-translator-language/src/main/resources/content/Language.properties
+++ b/content-translator/modules/content-translator-language/src/main/resources/content/Language.properties
@@ -13,6 +13,7 @@ translator-configuration-name=Automatic Translator Configuration
 add-automatic-translation=Automatic Translation
 journal.article.form.translate.select.language=Select Languages
 
+translator-no-yandex-api=No Yandex API key set.
 translator-error-message=Please verify that your credentials are valid.
 translator-auth-error-message=Please set your credentials in System Settings
 save-a-version-first=Please save an initial version before using automatic translation
