Update ResourceBundleLoaderComponent to handle new method in LF API without breaking the funcionality in previuos versions. Disable automatic translate button when it's a new content, this avoids to show an error screen to the user. Fix dependecy issue on yandex-translator-tests module

--- a/content-translator/modules/yandex-translator-tests/build.gradle
+++ b/content-translator/modules/yandex-translator-tests/build.gradle
@@ -14,5 +14,6 @@ dependencies {
 	compileInclude group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	compileInclude group: 'com.google.guava', name: 'guava', version: '22.0'
 	
+	compile group: 'org.apache.avalon.framework', name: 'avalon-framework-api', version: '4.3.1'
 	testCompile "junit:junit:4.11"
 }
